Streamline configuration parameter passing

--- a/Resources/Private/Templates/Exporter/Exporter.html
+++ b/Resources/Private/Templates/Exporter/Exporter.html
@@ -2,5 +2,5 @@
 
 <f:translate key="{label}" extensionName="bib" />
 
-<f:flashMessages />
+<f:flashMessages queueIdentifier="tx_bib" />
 {content -> f:format.raw()}
