--- a/Resources/Private/Templates/Navigation/Author.html
+++ b/Resources/Private/Templates/Navigation/Author.html
@@ -27,5 +27,10 @@
         </f:widget.paginate>
 
         <span class="tx_bib-navi_current">&nbsp;</span></div>
-    <div class="tx_bib-navi_author_select">{surnameSelection -> f:format.raw()}</div>
+    <div class="tx_bib-navi_author_select">
+        <f:form name="tx_bib_pi1-author_select_form" action="{f.uri.page(additionalParams:{tx_bib_pi1: {author: ''}})" method="post" class="tx_bib-author_select_form">
+            {surnameSelection -> f:format.raw()}
+            <f:form.submit name="tx_bib_pi1[action][select_author]" value="{f:translate(key:'button_go',extensionName: 'bib')}" />
+        </f:form>
+    </div>
 </div>
