Use fluid form tags

--- a/Resources/Private/Partials/Search/Abstracts.html
+++ b/Resources/Private/Partials/Search/Abstracts.html
@@ -3,7 +3,7 @@
      <f:form.checkbox
              additionalAttributes="{onchange: 'this.form.submit()'}"
              id="search-abstract"
-             name="tx_bib_pi1[search][abstracts]"
+             name="search[abstracts]"
              value="1"
              class="tx_bib-check"
              checked="{configuration.search_navi.abstracts}"/>
