--- a/Resources/Private/Partials/Search/Rule.html
+++ b/Resources/Private/Partials/Search/Rule.html
@@ -4,7 +4,7 @@
         <f:form.radio
                 class="tx_bib-check"
                 id="search-rule"
-                name="tx_bib_pi1[search][rule]"
+                name="search[rule]"
                 value="OR"
                 additionalAttributes="{onchange: 'this.form.submit()'}"
                 checked="{configuration.search_navi.abstracts} == 'OR'"
@@ -15,7 +15,7 @@
         <f:form.radio
                 class="tx_bib-check"
                 id="search-rule"
-                name="tx_bib_pi1[search][rule]"
+                name="search[rule]"
                 value="AND"
                 additionalAttributes="{onchange: 'this.form.submit()'}"
                 checked="{configuration.search_navi.abstracts} == 'AND'"
