--- a/Resources/Private/Partials/Search/Separator.html
+++ b/Resources/Private/Partials/Search/Separator.html
@@ -4,7 +4,7 @@
     <f:form.select
             id="search-separator"
             class="tx_bib-select"
-            name="tx_bib_pi1[search][sep]"
+            name="search[sep]"
             additionalAttributes="{onchange: 'this.form.submit()'}"
             options="{none: ' ', space: '', semi: ';', pipe: '|'}"
             value="{configuration.search_navi.sep}"
