--- a/Resources/Private/Templates/Navigation/Search.html
+++ b/Resources/Private/Templates/Navigation/Search.html
@@ -1,22 +1,21 @@
 <div class="tx_bib-navi_search">
-    <form name="tx_bib_pi1-search_form" method="post" class="tx_bib-search_form"
-            action="{f:uri.page(additionalParams: {tx_bib_pi1: {search: ''}})}">
+    <f:form extensionName="bib" pluginName="pi1" name="tx_bib_pi1-search_form" method="post" class="tx_bib-search_form" actionUri="{f:uri.page()}" noCache="1">
 
         <div class="tx_bib-navi_main_label">
             <f:translate key="searchNav_label" extensionName="bib"/>
             <span class="tx_bib-navi_current">&nbsp;</span></div>
 
-        <f:form.textfield size="24" maxlength="512" name="tx_bib_pi1[search][text]" value=""/>
+        <f:form.textfield size="24" maxlength="512" name="search[text]" value=""/>
 
-        <f:form.submit value="{f:translate(key:'searchNav_search', extensionName: 'bib')}" name="tx_bib_pi1[action][search]"/>
-        <f:form.submit value="{f:translate(key:'searchNav_clear', extensionName: 'bib')}" name="tx_bib_pi1[action][clear_search]"/>
+        <f:form.submit value="{f:translate(key:'searchNav_search', extensionName: 'bib')}" name="action[search]"/>
+        <f:form.submit value="{f:translate(key:'searchNav_clear', extensionName: 'bib')}" name="action[clear_search]"/>
 
         <label class="tx_bib-navi_label" for="search-extra">
             <f:translate key="searchNav_extra" extensionName="bib"/>
         </label>
         <f:form.checkbox additionalAttributes="{onchange: 'this.form.submit()'}"
                          id="search-extra"
-                         name="tx_bib_pi1[search][extra]"
+                         name="search[extra]"
                          value="1"
                          class="tx_bib-check"
                          checked="{configuration.search_navi.extra}"/>
@@ -40,12 +39,12 @@
             </div>
         </f:if>
 
-        <f:form.hidden name="tx_bib_pi1[search][extra]" value="1"/>
+        <f:form.hidden name="search[extra]" value="1"/>
         <f:if condition="{configuration.search_navi.extra']">
-            <f:form.hidden value="{configuration.search_navi.rule}" name="rule"/>
-            <f:form.hidden value="{configuration.search_navi.abstracts}" name="abstracts"/>
-            <f:form.hidden value="{configuration.search_navi.full_text}" name="full_text"/>
+            <f:form.hidden value="{configuration.search_navi.rule}" name="search[rule]"/>
+            <f:form.hidden value="{configuration.search_navi.abstracts}" name="search[abstracts]"/>
+            <f:form.hidden value="{configuration.search_navi.full_text}" name="search[full_text]"/>
         </f:if>
 
-    </form>
+    </f:form>
 </div>
