--- a/Resources/Private/Partials/Search/Fulltext.html
+++ b/Resources/Private/Partials/Search/Fulltext.html
@@ -3,7 +3,7 @@
     <f:form.checkbox
             additionalAttributes="{onchange: 'this.form.submit()'}"
             id="search-fulltext"
-            name="tx_bib_pi1[search][full_text]"
+            name="search[full_text]"
             value="1"
             class="tx_bib-check"
             checked="{configuration.search_navi.full_text}"/>
