Add separator default for authors

--- a/Resources/Private/Templates/Navigation/Author.html
+++ b/Resources/Private/Templates/Navigation/Author.html
@@ -24,7 +24,8 @@
             {name}
         </f:widget.paginate>
 
-        <span class="tx_bib-navi_current">&nbsp;</span></div>
+        <span class="tx_bib-navi_current">&nbsp;</span>
+    </div>
     <div class="tx_bib-navi_author_select">
         <f:form name="tx_bib_pi1-author_select_form" action="{f.uri.page(additionalParams:{tx_bib_pi1: {author: ''}})" method="post" class="tx_bib-author_select_form">
             {surnameSelection -> f:format.raw()}
